--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <div id="root" class="container"></div>
+    <div id="root" class="rootContainer"></div>
   </body>
   <footer>
   </footer>
